Backend minor CRUD updates